--- a/app/src/main/res/layout/detail_section_movie.xml
+++ b/app/src/main/res/layout/detail_section_movie.xml
@@ -12,12 +12,15 @@
 
         <TextView
             android:id="@+id/tv_title"
+            android:layout_width="0dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             tools:text="Dr Strange"
             style="@style/DetailTitleBold"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin" />
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            app:layout_constraintRight_toLeftOf="@+id/tv_release_date"
+            android:layout_marginRight="8dp" />
 
         <TextView
             android:id="@+id/tv_release_date"
@@ -26,9 +29,7 @@
             tools:text="@string/mock_release_date"
             style="@style/DetailTitleBold"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
-            android:layout_marginBottom="0dp" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/tv_runtime"
@@ -36,8 +37,7 @@
             style="@style/DetailText"
             app:layout_constraintLeft_toRightOf="@+id/iv_poster"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/iv_poster"
-            android:layout_marginTop="0dp" />
+            app:layout_constraintTop_toTopOf="@+id/iv_poster" />
 
         <ImageView
             android:id="@+id/iv_poster"
@@ -46,7 +46,6 @@
             tools:src="@mipmap/ic_launcher"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title" />
 
         <TextView
@@ -69,7 +68,6 @@
             android:layout_height="20dp"
             android:src="@drawable/ic_rating"
             tools:src="@drawable/ic_rating"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_runtime"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />
@@ -79,9 +77,7 @@
             app:layout_constraintLeft_toRightOf="@+id/iv_rating"
             android:layout_marginLeft="8dp"
             app:layout_constraintTop_toTopOf="@+id/iv_rating"
-            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_rating"
-            android:layout_marginBottom="0dp"
             app:layout_constraintVertical_bias="0.58"
             tools:text="@string/mock_rating"
             style="@style/DetailText"/>
@@ -95,9 +91,7 @@
             app:layout_constraintRight_toRightOf="parent"
             tools:src="@drawable/ic_favorite_white"
             app:layout_constraintTop_toTopOf="@+id/iv_poster"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
-            android:layout_marginBottom="0dp" />
+            app:layout_constraintBottom_toBottomOf="@+id/iv_poster" />
 
     </android.support.constraint.ConstraintLayout>
 
