--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -18,12 +18,12 @@
 
     <TextView
         android:id="@+id/tv_error"
-        android:text="@string/error_unable_loading"
         style="@style/DetailTitle"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:layout_gravity="center_vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:visibility="gone"/>
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:text="@string/error_unable_loading"
+        android:visibility="gone" />
 
 </FrameLayout>
