--- a/app/src/main/res/layout/detail_section_movie.xml
+++ b/app/src/main/res/layout/detail_section_movie.xml
@@ -46,18 +46,21 @@
             tools:src="@mipmap/ic_launcher"
             android:layout_marginTop="@dimen/element_vertical_margin"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_title" />
+            app:layout_constraintLeft_toLeftOf="@+id/tv_title"
+            android:adjustViewBounds="true"/>
 
         <TextView
             android:id="@+id/tv_overview"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            app:layout_constraintRight_toRightOf="@+id/iv_fav"
             tools:text="@string/mock_overview"
             android:layout_marginTop="@dimen/element_vertical_margin"
             app:layout_constraintTop_toBottomOf="@+id/iv_poster"
-            app:layout_constraintLeft_toLeftOf="@+id/iv_poster"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/element_vertical_margin" />
