--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_detail"
+    android:id="@+id/fl_movie_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/include_progress_error"/>
+
 </FrameLayout>
