--- a/app/src/main/res/layout/view_trailer.xml
+++ b/app/src/main/res/layout/view_trailer.xml
@@ -3,5 +3,4 @@
     android:id="@+id/youtube_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:visibility="visible" />
+    android:layout_centerHorizontal="true"/>
