--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#424242</color>
+    <color name="colorPrimary">#616161</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorPrimaryLight">#7C7C7C</color>
+    <color name="colorPrimaryLight">#9E9E9E</color>
     <color name="colorAccent">@android:color/white</color>
 </resources>
